--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 
 [dependencies]
 rand = "0.8.5"
+serde = { version = "^1.0", features = ["derive"] }
+serde_json = "^1.0"
+serde_with = { version = "^1.12", features = ["json"] }
